deploy/built-in-policies/privilged-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAzureContainerNoPrivilege
metadata:
  name: container-no-privilege
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
